app/static/scatter.css
body {
    margin: 0;
    overflow: hidden;
}

rect {
  fill: transparent;
  shape-rendering: crispEdges;
  stroke: #000;
  stroke-width: 1;
}

div#container {
    max-height: 100%;
    max-width: 100%;
    width: 100%;
    height: 100%;
    position: absolute;
    position: fixed;
    top: 0; left: 0; bottom: 0; right: 0;
    overflow: hidden;
    display: inline-block;
}

.svg-content {
    display: inline-block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.dot {
  stroke: none;
  fill-opacity: .5;
}

.d3-tip {
  line-height: 1;
  font-weight: bold;
  padding: 12px;
  background: rgba(0, 0, 0, 0.8);
  color: #fff;
  border-radius: 2px;
}

/* Creates a small triangle extender for the tooltip */
.d3-tip:after {
  box-sizing: border-box;
  display: inline;
  font-size: 10px;
  width: 100%;
  line-height: 1;
  color: rgba(0, 0, 0, 0.8);
  content: "\25BC";
  position: absolute;
  text-align: center;
}

/* Style northward tooltips differently */
.d3-tip.n:after {
  margin: -1px 0 0 0;
  top: 100%;
  left: 0;
}

